--- a/build.gradle
+++ b/build.gradle
@@ -25,18 +25,16 @@ repositories {
 
 
 dependencies {
-	implementation('org.springframework.boot:spring-boot-starter')
+	implementation'org.springframework.boot:spring-boot-starter'
 	//testImplementation('org.springframework.boot:spring-boot-starter-test')
 	
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'        
     compile 'org.springframework.boot:spring-boot-starter-jdbc'
-	//compile 'postgresql:postgresql:9.0-801.jdbc4'
-		
 	compile 'org.apache.commons:commons-io:1.3.2'
 	
-	testImplementation "org.junit.jupiter:junit-jupiter-params:5.3.1"
+	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
 		
 	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.3.1'
@@ -52,28 +50,9 @@ dependencies {
     	exclude group: 'junit', module: 'junit' //by both name and group
 	}
 	
-	//testCompile("org.springframework.boot:spring-boot-starter-test")
-    testCompile("org.springframework.restdocs:spring-restdocs-mockmvc")
-    
-	
-	/*testCompile 'org.junit.jupiter:junit-jupiter-api:5.1.0'
-	testCompile 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
-    testCompile 'org.junit.vintage:junit-vintage-engine:5.1.0'
-    testCompile 'org.junit.platform:junit-platform-launcher:1.1.0'
-    testCompile 'org.junit.platform:junit-platform-runner:1.1.0'
-	testCompile 'org.springframework.boot:spring-boot-starter-test'
-	testCompile 'org.mockito:mockito-core:1.10.19'*/
-	
-	
-	testCompile 'com.h2database:h2'
+    testCompile'org.springframework.restdocs:spring-restdocs-mockmvc'
+    testCompile 'com.h2database:h2'
 }
-
-
-test {  
-    
-}
-
-
 
 test {
     useJUnitPlatform {
